# advent-of-code-2022

./: .gitignore  README.md  advent-of-code2022.cabal
app/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs
